scripts/nullaway/annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8.txt
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/Main.java:90: error: [NullAway] @NonNull field Main$Person.datiqingkuang not initialized
		public List<Integer> datiqingkuang;
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/interpreter/InterpreterTest.java:80: error: [NullAway] unboxing of a @Nullable value
		return var.get(key);
		              ^
    (see http://t.uber.com/nullaway )
../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/mediator/AbstractMediator.java:11: error: [NullAway] initializer method does not guarantee @NonNull fields purchase (line 6), sale (line 7), stock (line 8) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public AbstractMediator()
	       ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url74761fd9a6_cstriker1407_design_pattern_tgz-pJ8-yeah_cstriker1407_design_patterns_MainJ8/src/yeah/cstriker1407/design_patterns/observe/ObserveTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
